# embree-rs

./: .gitignore  Cargo.toml
embree-sys/: .gitignore  Cargo.toml  build.rs  generate_bindings.sh  pregenerated_bindings.rs
embree-sys/.cargo/: config
embree-sys/src/: lib.rs
examples/: common.rs  raytracer.rs
examples/common/: mod.rs
src/: aabb.rs  buffer.rs  common.rs  device.rs  enum_into.rs  error.rs  geometry.rs  lib.rs  point_geometry.rs  polygon_geometry.rs  ray.rs  scene.rs  triangle_geometry.rs  type_format.rs  user_geometry.rs
