[package]
name = "embree"
version = "0.1.0"
authors = ["Steven <locke9@gmail.com>"]

[dependencies]
embree-sys = { path = "embree-sys" }
# mint = "0.5"
cgmath = "0.16"
bitflags = "1.0"
log = "0.4"
vec_map = "0.8"
mopa = "0.2"
# smallvec = "0.6"

[dev-dependencies]
minifb = "0.10.4"
derive_more = "0.9"
num-traits = "0.2"
# tobj = "0.1.6"

[[example]]
name = "raytracer"
path = "examples/raytracer.rs"
