[package]
name = "embree-sys"
version = "0.1.0"
authors = ["Steven <locke9@gmail.com>"]
links = "embree3"
build = "build.rs"

[build-dependencies]
bindgen = { version = "0.47", optional = true }
# cmake = { version = "0.1.29", optional = true }
vcpkg = { version = "0.2.3", optional = true }
pkg-config = "0.3.14"

[features]
default = []
use-bindgen = ["bindgen"]
